# sample-pellier-agentic-search-apg

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  NOTICE  PROBE_CHECKLIST.md  README.md  WORKSHOP_HARDENING_TODO.md  lab-content-audit.md  sdl_architecture_diagram.html  sdl_mockup_01_editorial.html  sdl_mockup_02_atelier.html  sdl_mockup_03_canvas.html  sdl_mockup_04_hybrid.html  sdl_sequence_diagram.html
pellier/backend/: .bedrock_agentcore.yaml  .env.example  .gitignore  Dockerfile.agentcore  __init__.py  agentcore.json.template  agentcore_runtime.py  app.py  aws-targets.json.template  boutique_copy.py  config.py  generate_mcp_config.py  personas-config.json  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  test_agents.py
pellier/backend/agents/: __init__.py  curator.py  customer_support_agent.py  experience_guide.py  graph_orchestrator.py  graph_pattern.py  inventory_agent.py  orchestrator.py  pricing_agent.py  recommendation_agent.py  search_agent.py  specialist_hooks.py  stock_keeper.py  style_advisor.py  value_analyst.py
pellier/backend/models/: __init__.py  product.py  search.py
pellier/backend/routes/: __init__.py  agent.py  atelier_observatory.py  auth.py  boutique.py  products.py  search.py  transcribe.py  user.py  workshop.py
pellier/backend/scripts/: create_local_memory.py  smoke_phase2_dispatcher.py
pellier/backend/services/: __init__.py  agent_context.py  agent_tools.py  agentcore_evals.py  agentcore_gateway.py  agentcore_identity.py  agentcore_memory.py  agentcore_policy.py  agentcore_runtime.py  auth.py  business_logic.py  (+26 more)
(+788 files in other folders)
